[project]
name = "tinybreaker"
description = "ComfyUI-TinyBreaker is a collection of custom nodes specifically designed to generate images using the TinyBreaker model. It's actively developed with ongoing improvements. Although still in progress, these nodes are functional and allow you to explore the potential of the model."
version = "0.1.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/martin-rizzo/ComfyUI-TinyBreaker"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "martin-rizzo"
DisplayName = "ComfyUI-TinyBreaker"
Icon = "https://martin-rizzo.github.io/ComfyUI-TinyBreaker/img/thumbnail.jpg"
